--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,14 @@
 <resources>
     <string name="app_name">AquaAlert</string>
     <string name="btn_set_reminder">Set Reminder</string>
+    <string name="btn_cancel_reminder">Cancel</string>
     <string-array name="reminder_time">
-        <item>TODO</item>
+        <item>1 minut</item>
+        <item>5 minute</item>
+        <item>10 minute</item>
+        <item>15 minute</item>
+        <item>30 minute</item>
+        <item>45 minute</item>
+        <item>60 minute</item>
     </string-array>
 </resources>
